# personalFinanceAssistant

./: .gitignore
finsight-ai/: .env.example  (+6 more)
finsight_ai/backend/: .gitignore  pyproject.toml  requirements.txt
finsight_ai/backend/app/: __init__.py  config.py  logging_config.py  main.py  statement_sources.py
finsight_ai/backend/app/api/: analytics.py  catalog.py  chat.py  dashboard.py  documents.py  health.py  scan.py
finsight_ai/backend/app/chat/: CHATBOT_PRINCIPLES.md  answer_templates.py  answer_verifier.py  fact_builder.py  guardrails.py  query_planner.py  retrieval.py  streaming.py
finsight_ai/backend/app/config/: __init__.py  statement_catalog.py
finsight_ai/backend/app/core/: logger.py  middleware.py
finsight_ai/backend/app/database/: engine.py  models.py
finsight_ai/backend/app/db/: __init__.py  engine.py  fts.py  models.py  repositories.py
finsight_ai/backend/app/domain/: __init__.py  classification.py  entities.py  enums.py  errors.py
finsight_ai/backend/app/mcp_tools/: contracts.py  ingest_tool.py  report_tool.py
finsight_ai/backend/app/parsers/: __init__.py  base.py  categorize.py  pdf.py
finsight_ai/backend/evals/: chat_eval_cases.yaml  eval_report.md  run_chat_evals.py
finsight_ai/backend/migrations/: phase3_001_add_bucket_and_category_columns.py
finsight_ai/backend/scripts/: debug_chat.py  reprocess_documents.py
finsight_ai/backend/tests/: conftest.py  test_amex_parser.py  test_answer_strategy.py  test_answer_verifier.py  test_chat_router.py  test_fact_builder.py  test_intent_classifier.py  test_llm_grounding.py  test_normalization.py  test_reprocess_and_health.py
(+428 files in other folders)
